elasticsearch/es-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: elasticsearch
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/app-root: "/"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # "413 Request Entity Too Large" uploading plugins, increase client_max_body_size
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    # For nginx-ingress controller < 0.9.0.beta-18
    ingress.kubernetes.io/ssl-redirect: "true"
    # "413 Request Entity Too Large" uploading plugins, increase client_max_body_size
    ingress.kubernetes.io/proxy-body-size: 50m
    ingress.kubernetes.io/proxy-request-buffering: "off"
spec:
  # To enable SSL offloading at ingress level, uncomment the following 5 lines
  #tls:
  #- hosts:
  #  - elasticsearch.kube.pse.beescloud.com
  #  # Name of the secret containing the certificate to be used
  #  secretName: cje-example-com-tls
  rules:
  - http:
      paths:
      - path: /elasticsearch
        backend:
          serviceName: elasticsearch
          servicePort: 9200
    host: elasticsearch.kube.pse.beescloud.com
